# TaskNag

./: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  check_db_schema.js  claude.json  githubcli-archive-keyring.gpg  index.html  jest.config.js  package-lock.json  package.json  play-sound.ps1  tailwind.config.js  test-notifications.js  tsconfig.json
.claude/: settings.local.json
.serena/: project.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  20240816_browser_actions.sql  20240816_ollama_agent_tables.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: agent_commands.rs  browser_commands.rs  context_commands.rs  enhanced_agent_commands.rs  log_commands.rs  mod.rs  prompt_commands.rs  tag_commands.rs  task_commands.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs
src-tauri/src/models/: browser_action.rs  mod.rs  tag.rs  task.rs
src-tauri/src/services/: agent_service.rs  browser_action_service.rs  context_service.rs  mod.rs  notification_service.rs  ollama_client.rs  personality_manager.rs  prompt_manager.rs  tag_service.rs  task_service.rs  url_validator.rs
src-tauri/src/tests/: browser_action_manual_test.rs  browser_action_task_integration_test.rs  database_schema_validation_test.rs  debug_database.rs  error_handling_tests.rs  hierarchical_task_tests.rs  mock_database.rs  mod.rs  notification_system_tests.rs  notification_tests.rs  real_database_test.rs  real_db_schema_check.rs  subtask_notification_tests.rs  tag_crud_tests.rs  task_crud_tests.rs  task_tag_integration_tests.rs
(+91 files in other folders)
