[package]
name = "tasknag"
version = "0.1.0"
description = "TaskNag - 口うるさくて世話焼きなWindowsデスクトップタスク管理アプリ"
authors = ["steinwand6 <steinwand.tomo@gmail.com>"]
license = "MIT"
repository = "https://github.com/steinwand6/TaskNag"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tasknag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }
# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Testing
futures = "0.3"
dirs = "5.0"
# HTTP Client for Ollama integration
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-stream = "0.1"

[dev-dependencies]
mockito = "0.31"
tempfile = "3.12.0"
